Added API Documentation. Added DB pre-population scripts. Implemented validations and exceptions handling.